--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
     <header class="navbar navbar-fullpage boxed">
       <div class="navbar-bg"></div>
-      <a class="brand" href="Batuhan_Arseven.html#page1">
+      <a class="brand" href="https://batucros.github.io/#page1">
         <img alt="" width="36" height="36" src="images/bg/A.png">
         <div class="brand-info">
           <div class="brand-name" style="font-size:18px"><i>Batuhan's Resume </i></div>
