--- a/index.html
+++ b/index.html
@@ -31,23 +31,22 @@
       <span class="close-menu icon-cross2 right-boxed"></span>
       <ul class="menu-list right-boxed">
         <li  data-menuanchor="page1">
-          <a  href="#page1">Welcome Page</a>
+          <a  href="https://github.com/batucros">Github</a>
         </li>
         <li  data-menuanchor="page2">
-          <a href="#page2">Introducing</a>
+          <a href="http://www.linkedin.com/in/batuhanarseven">LinkedIn</a>
         </li>
         <li  data-menuanchor="page3">
-          <a href="#page3">My Skills</a>
+          <a href="https://stackoverflow.com/users/20334728/batucros">Stack Overflow</a>
         </li>
         <li  data-menuanchor="page4">
-          <a href="#page4">Links</a>
+          <a href="https://g.dev/ba2han-r7">Google Developers</a>
         </li>
       </ul>
       <div class="menu-footer right-boxed">
         <div class="social-list">
-
         </div>
-        <div class="copy">© Batuhan Arseven <br> 2023 - 2024 <br> All rights reserved </div>
+        <div class="copy">© Batuhan Arseven <br>batuhan.arseven06@gmail.com<br> 2023 - 2024 <br> All rights reserved </div>
       </div>
     </div>
 
@@ -215,27 +214,7 @@
           </div>
         </div>
       </div>
-      <div data-anchor="page4" class="pp-scrollable section section-4">
-        <div class="scroll-wrap">
-          <div class="section-bg" style="background-image:url(images/bg/contact.gif);"></div>
-          <div class="scrollable-content">
-            <div class="vertical-title text-white d-none d-lg-block"><span>Contact</span></div>
-            <div class="vertical-centred">
-              <div class="boxed boxed-inner">
-                <div class="boxed">
-                  <div class="container">
-                    <div class="intro overflow-hidden">
-                      <div class="row">
-                        <div class="col-md-6">
-                          <h2 class="title"><span class="text-primary"> You can contact me  </span><i>with these emails</i></h2>
-                          <h5 class="text">batuhan.arseven@std.yeditepe.edu.tr <br><br> batuhan.arseven06@gmail.com</h5>
-                          <section class="contact-address">
-                              <h2 class="title">Links</span></h2>
-                              <h3 class="text" style="color:#56b5c2;"><a href="https://github.com/batucros" target="_blank">https://<class="text" style="color:#ffffff;">github.com/batucros</a><br>
-                              <h3 class="text" style="color:#56b5c2;"><a href="http://www.linkedin.com/in/batuhanarseven" target="_blank">https://<class="text" style="color:#ffffff;">www.linkedin.com/in/batuhanarseven</a><br>
-                              <h3 class="text" style="color:#56b5c2;"><a href="https://stackoverflow.com/users/20334728/batucros" target="_blank">https://<class="text" style="color:#ffffff;">stackoverflow.com/users/20334728/batucros</a><br>
-                              <h3 class="text" style="color:#56b5c2;"><a href="https://g.dev/ba2han-r7" target="_blank">https://<class="text" style="color:#ffffff;">g.dev/ba2han-r7</a><br>
-                          </section>
+     
 
 
 
