--- a/index.html
+++ b/index.html
@@ -62,9 +62,7 @@
       </a>
 
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse" aria-expanded="false">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
+        <h3 class="resume-type">Contact Me</h3>
       </button>
 
       <div class="contacts d-none d-md-block">
