--- a/index.html
+++ b/index.html
@@ -225,8 +225,7 @@
 <script src="js/owl.carousel.min.js"></script>
 <script src="js/jquery.pagepiling.min.js"></script>
 <script src="js/firestore.js"></script>
-
-
 <script src="js/scripts.js"></script>
+<meta name="viewport" content="width=device-width,initial-scale=1">     
 </body>
 </html>
