--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     <div class="intro">
                       <div class="row">
                         <div class="col-md-8 col-lg-6">
-                          <h1 class="display-2 text-white  wow fadeIn" data-wow-delay="0.1s"><span class="text-primary">Welcome to </span><i>my website</i></h1>
+                          <h1 class="display-2 text-white  wow fadeIn" data-wow-delay="0.1s"><span class="text-primary">Greetings </span><i>Welcome to my website</i></h1>
                           <a class="madeup" id="madeup" style="color: #ffffff; text-decoration: none"  href="https://batucros.github.io/#page2"><span class="icon ion-ios-play"></span>Next page</a>
                         </div>
                       </div>
